Added Example that merges example1 and example2 in a single dll.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(register_data_plugin)
 add_subdirectory(tests/simple_read_test)
 add_subdirectory(examples/example1)
 add_subdirectory(examples/example2)
+add_subdirectory(examples/example3)
